--- a/HonoluluPy/climate_analysis.ipynb
+++ b/HonoluluPy/climate_analysis.ipynb
@@ -14,46 +14,363 @@
     "\n",
     "* Use SQLAlchemy `create_engine` to connect to your sqlite database.\n",
     "\n",
-    "* Use SQLAlchemy `automap_base()` to reflect your tables into classes and save a reference to those classes called `Station` and `Measurement`.\n",
-    "\n",
+    "* Use SQLAlchemy `automap_base()` to reflect your tables into classes and save a reference to those classes called `Station` and `Measurement`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine, inspect, func\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(\"sqlite:///resources/hawaii.sqlite\", echo=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-05-11 15:49:58,920 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2018-05-11 15:49:58,921 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-05-11 15:49:58,922 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2018-05-11 15:49:58,923 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-05-11 15:49:58,925 INFO sqlalchemy.engine.base.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
+      "2018-05-11 15:49:58,926 INFO sqlalchemy.engine.base.Engine ()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['measurement', 'station']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inspector = inspect(engine)\n",
+    "inspector.get_table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_columns() missing 1 required positional argument: 'table_name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-e6d120c0c707>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minspector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_columns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: get_columns() missing 1 required positional argument: 'table_name'"
+     ]
+    }
+   ],
+   "source": [
+    "inspector."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Base' has no attribute 'station'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-7115aeea9cdf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mBase\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mautomap_base\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mBase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprepare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreflect\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mStation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m#Measurement = Base.classes.measurement\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'Base' has no attribute 'station'"
+     ]
+    }
+   ],
+   "source": [
+    "Base = automap_base()\n",
+    "Base.prepare(engine, reflect=True)\n",
+    "Station = Base.classes.get\n",
+    "#Measurement = Base.classes.measurement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Precipitation Analysis\n",
     "\n",
     "* Design a query to retrieve the last 12 months of precipitation data.\n",
-    "\n",
-    "* Select only the `date` and `prcp` values.\n",
-    "\n",
-    "* Load the query results into a Pandas DataFrame and set the index to the date column.\n",
-    "\n",
+    "* Select only the `date` and `prcp` values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = Session(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prcp = session.query(Measurement.date, func.avg(Measurement.prcp)).\\\n",
+    "    filter(Measurement.date>'2016-08-23').group_by(Measurement.date)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Load the query results into a Pandas DataFrame and set the index to the date column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prcp_df = pd.read_sql(prcp.statement,session.bind)\n",
+    "prcp_df['date'] = pd.to_datetime(prcp_df['date'])\n",
+    "prcp_df = prcp_df.set_index('date')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* Plot the results using the DataFrame `plot` method.\n",
     "\n",
-    "<center><img src='images/precip.png' /></center>\n",
-    "\n",
-    "* Use Pandas to print the summary statistics for the precipitation data.\n",
-    "\n",
+    "`<center><img src='images/precip.png' /></center>`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(figsize=(20,7))\n",
+    "plt.style.use('seaborn')\n",
+    "prcp_df.plot(ax=ax,legend=False)\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Precipitation, in')\n",
+    "ax.set_xlim([prcp_df.index.min(),prcp_df.index.max()])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Use Pandas to print the summary statistics for the precipitation data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prcp_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Station Analysis\n",
     "\n",
-    "* Design a query to calculate the total number of stations.\n",
+    "* Design a query to calculate the total number of stations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_stations = session.query(Station.name).distinct().count()\n",
     "\n",
+    "print(f'There are {number_of_stations} stations')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* Design a query to find the most active stations.\n",
     "\n",
     "  * List the stations and observation counts in descending order\n",
     "\n",
-    "  * Which station has the highest number of observations?\n",
-    "\n",
+    "  * Which station has the highest number of observations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "most_active_stations = session.query(Measurement.station, func.count(Measurement.prcp))\\\n",
+    "                        .group_by(Measurement.station)\\\n",
+    "                        .order_by(func.count(Measurement.prcp).desc()).all()\n",
+    "df = pd.DataFrame(most_active_stations,columns=['Station','Number of observations'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* Design a query to retrieve the last 12 months of temperature observation data (tobs).\n",
-    "\n",
-    "  * Filter by the station with the highest number of observations.\n",
-    "\n",
+    "* Filter by the station with the highest number of observations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tobs = session.query(Measurement.date, Measurement.tobs).\\\n",
+    "    filter(Measurement.date>'2016-08-23', Measurement.station == 'USC00519281').group_by(Measurement.date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tobs_df = pd.read_sql(tobs.statement,session.bind)\n",
+    "tobs_df['date'] = pd.to_datetime(tobs_df['date'])\n",
+    "tobs_df = tobs_df.set_index('date')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  * Plot the results as a histogram with `bins=12`.\n",
     "\n",
-    "  <center><img src='images/temp_hist.png' height=\"400px\" /></center>\n",
-    "\n",
+    "  <center><img src='images/temp_hist.png' height=\"400px\" /></center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(figsize=(20,7))\n",
+    "plt.style.use('seaborn')\n",
+    "tobs_df.plot(ax=ax,legend=False)\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Temperature, F')\n",
+    "ax.set_xlim([tobs_df.index.min(),tobs_df.index.max()])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Temperature Analysis\n",
     "\n",
-    "* Write a function called `calc_temps` that will accept a start date and end date in the format `%Y-%m-%d` and return the minimum, average, and maximum temperatures for that range of dates.\n",
-    "\n",
-    "* Use the `calc_temps` function to calculate the min, avg, and max temperatures for your trip using the matching dates from the previous year (i.e. use \"2017-01-01\" if your trip start date was \"2018-01-01\")\n",
-    "\n",
+    "* Write a function called `calc_temps` that will accept a start date and end date in the format `%Y-%m-%d` and return the minimum, average, and maximum temperatures for that range of dates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_temp = session.query(func.min(Measurement.tobs).label('name')).\\\n",
+    "    filter(Measurement.date>start_date, Measurement.date<end_date).all()\n",
+    "print(min_temp[0].name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_temps(start_date, end_date):\n",
+    "    min_temp = session.query(func.min(Measurement.tobs).label('name')).\\\n",
+    "        filter(Measurement.date>start_date, Measurement.date<end_date).all()\n",
+    "    max_temp = session.query(func.max(Measurement.tobs).label('name')).\\\n",
+    "        filter(Measurement.date>start_date, Measurement.date<end_date).all()\n",
+    "    avg_temp = session.query(func.avg(Measurement.tobs).label('name')).\\\n",
+    "        filter(Measurement.date>start_date, Measurement.date<end_date).all()\n",
+    "    return min_temp[0].name, max_temp[0].name, avg_temp[0].name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Use the `calc_temps` function to calculate the min, avg, and max temperatures for your trip using the matching dates from the previous year (i.e. use \"2017-01-01\" if your trip start date was \"2018-01-01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vacation_start = '2018-08-15'\n",
+    "vacation_end   = '2018-08-30'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_date, end_date = '2017-08-15','2017-08-30'\n",
+    "mn, mx, av = calc_temps(start_date, end_date)\n",
+    "print(f'Temperatures for {start_date}-{end_date}:')\n",
+    "print(f'Min: {mn}, max: {mx}, average: {av}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* Plot the min, avg, and max temperature from your previous query as a bar chart.\n",
     "\n",
     "  * Use the average temperature as the bar height.\n",
@@ -81,7 +398,7 @@
     "\n",
     "  <center><img src=\"images/daily_normals.png\" /></center>\n",
     "\n",
-    "---\n"
+    "---"
    ]
   },
   {
