--- a/HonoluluPy/climate_analysis.ipynb
+++ b/HonoluluPy/climate_analysis.ipynb
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,12 @@
     "        filter(Measurement.date>start_date, Measurement.date<end_date).all()\n",
     "    avg_temp = session.query(func.avg(Measurement.tobs).label('name')).\\\n",
     "        filter(Measurement.date>start_date, Measurement.date<end_date).all()\n",
-    "    return min_temp[0].name, max_temp[0].name, avg_temp[0].name"
+    "    res = {\n",
+    "        'Min':round(min_temp[0].name,2),\n",
+    "        'Max':round(max_temp[0].name,2),\n",
+    "        'Avg':round(avg_temp[0].name,2)\n",
+    "        }\n",
+    "    return res"
    ]
   },
   {
@@ -797,13 +802,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -844,6 +842,119 @@
     "* You will need to join the station and measurement tables for some of the analysis queries.\n",
     "\n",
     "* Use Flask `jsonify` to convert your api data into a valid json response object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask, jsonify\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "@app.route(\"/\")\n",
+    "def welcome():\n",
+    "    \"\"\"List all available api routes.\"\"\"\n",
+    "    return (\n",
+    "        f'Available routes:</br>'\n",
+    "        f'/api/v1.0/precipitation</br>'\n",
+    "        f'/api/v1.0/stations</br>'\n",
+    "        f'/api/v1.0/tobs</br>'\n",
+    "        f'/api/v1.0/date and /api/v1.0/start_date/end_date'\n",
+    "    )\n",
+    "\n",
+    "@app.route(\"/api/v1.0/tobs\")\n",
+    "def tobs():\n",
+    "    \"\"\"\n",
+    "    Query for the dates and temperature observations from the last year.\n",
+    "    Convert the query results to a Dictionary using date as the key and tobs as the value.\n",
+    "    Return the json representation of your dictionary.\n",
+    "    \"\"\"\n",
+    "    prcp = session.query(Measurement.date, func.avg(Measurement.tobs))\\\n",
+    "        .filter(Measurement.date>'2015-12-31')\\\n",
+    "        .filter(Measurement.date<'2017-01-01')\\\n",
+    "        .group_by(Measurement.date).all()\n",
+    "    res = {}\n",
+    "    for d, t in prcp:\n",
+    "        res[str(d)] = t\n",
+    "    return jsonify(res)\n",
+    "\n",
+    "@app.route(\"/api/v1.0/stations\")\n",
+    "def stations():\n",
+    "    \"\"\"\n",
+    "    Return a json list of stations from the dataset.\n",
+    "    \"\"\"\n",
+    "    res = session.query(Station.station, Station.name).distinct().all()\n",
+    "    res = [{s: n} for s, n in res]\n",
+    "    return jsonify(res)\n",
+    "\n",
+    "@app.route(\"/api/v1.0/precipitation\")\n",
+    "def precipitation():\n",
+    "    \"\"\"\n",
+    "    Query for the dates and precipitation observations from the last year.\n",
+    "    Convert the query results to a Dictionary using date as the key and tobs as the value.\n",
+    "    Return the json representation of your dictionary.\n",
+    "    \"\"\"\n",
+    "    prcp = session.query(Measurement.date, func.avg(Measurement.prcp))\\\n",
+    "        .filter(Measurement.date>'2015-12-31')\\\n",
+    "        .filter(Measurement.date<'2017-01-01')\\\n",
+    "        .group_by(Measurement.date).all()\n",
+    "    res = {}\n",
+    "    for d, t in prcp:\n",
+    "        res[str(d)] = round(t,2)\n",
+    "    return jsonify(res)\n",
+    "\n",
+    "\n",
+    "@app.route('/api/v1.0/<start>')\n",
+    "def start(start):\n",
+    "    '''\n",
+    "    Calculate TMIN, TAVG, and TMAX for all dates \n",
+    "    greater than and equal to the start date.\n",
+    "    '''\n",
+    "    end = session.query(func.strftime('%Y-%m-%d',func.max(Measurement.date))).all()\n",
+    "    end = end[0][0]\n",
+    "    return jsonify(calc_temps(start,end))\n",
+    "\n",
+    "@app.route('/api/v1.0/<start>/<end>')\n",
+    "def between(start,end):\n",
+    "    '''\n",
+    "    When given the start and the end date, calculate the TMIN, TAVG, and TMAX \n",
+    "    for dates between the start and end date inclusive.\n",
+    "    '''\n",
+    "    return jsonify(calc_temps(start,end))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://localhost:5000/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [11/May/2018 21:09:18] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/May/2018 21:09:20] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/May/2018 21:09:22] \"GET /api/v1.0/precipitation HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/May/2018 21:09:26] \"GET /api/v1.0/2017-01-01 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/May/2018 21:09:27] \"GET /api/v1.0/2017-01-01 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/May/2018 21:09:32] \"GET /api/v1.0/2017-01-01/ HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [11/May/2018 21:09:33] \"GET /api/v1.0/2017-01-01/2018-01-05 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/May/2018 21:09:37] \"GET /api/v1.0/2017-01-01/2017-08-30 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/May/2018 21:09:37] \"GET /favicon.ico HTTP/1.1\" 404 -\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for Jupyter only\n",
+    "from werkzeug.wrappers import Request, Response\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    from werkzeug.serving import run_simple\n",
+    "    run_simple('localhost', 5000, app)"
    ]
   },
   {
